Making things ready to start the challenge

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Frontend Mentor | Typemaster pre-launch landing page</title>
 </head>
 <body>
-  Pre-order now
+
+  
+  <!-- Pre-order now
 
   Typemaster keyboard
 
@@ -39,6 +41,6 @@
   Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps
   you type in low light conditions.
 
-  Typemaster 2021 | All Rights Reserved
+  Typemaster 2021 | All Rights Reserved -->
 </body>
 </html>
