Finishing the navbar section

--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Typemaster pre-launch landing page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body>
 
-  
-  <!-- Pre-order now
+  <header>
+    <nav class="nav-container">
+      <div class="img-logo">
+        <a href="index.html">
+          <img class="logo" src="./starter-code/assets/shared/logo.svg" alt="This is the logo">
+        </a>
+      </div>
+      <div class="btn-link">
+        <a href="index.html" class="btn">Pre-order now</a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- 
 
   Typemaster keyboard
 
