--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 
+  <!----------------- NAVBAR SECTION ----------------->
   <header>
     <nav class="nav-container">
       <div class="img-logo">
@@ -27,15 +28,30 @@
     </nav>
   </header>
 
+  <!----------------- MAIN SECTION ----------------->
+  <main>
+    <section class="first-section">
+      <div class="first-container">
+        <img class="square" src="./starter-code/assets/shared/pattern-square.svg" alt="">
+        <div class="text-area">
+          <h1>Typemaster <br> keyboard</h1>
+          <p class="improve">
+            Improve your productivity and gaming without breaking the bank. 
+            Upgrade to a high quality mechanical typing experience.
+          </p>
+          <div>
+            <a href="index.html" class="btn-2">Pre-order now</a>
+            <span class="release">Release on 5/27</span>
+          </div>
+        </div>
+        <div class="img-area">
+          <img class="img-keyboard" src="./starter-code/assets/desktop/image-keyboard.jpg" alt="Image of a keyboard">
+        </div>
+      </div>
+    </section>
+  </main>
+
   <!-- 
-
-  Typemaster keyboard
-
-  Improve your productivity and gaming without breaking the bank. Upgrade to a high quality 
-  mechanical typing experience.
-
-  Pre-order now
-  Release on 5/27
 
   Mechanical wireless keyboard
   The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety 
