Finishing the second section

--- a/index.html
+++ b/index.html
@@ -49,14 +49,45 @@
         </div>
       </div>
     </section>
+
+    <section class="second-section">
+      <div class="second-container">
+        <img class="square-2" src="./starter-code/assets/shared/pattern-square.svg" alt="">
+        <div class="first-img">
+          <img class="hover-img" src="./starter-code/assets/desktop/image-phone-and-keyboard.jpg" alt="">
+        </div>
+        <div class="second-img">
+          <img class="img-key" src="./starter-code/assets/desktop/image-glass-and-keyboard.jpg" alt="">
+        </div>
+        <div class="text-zone">
+          <h2>Mechanical <br> wireless <br> keyboard</h2>
+          <p class="typemaster">
+            The Typemaster keyboard boasts top-notch build and practical design. 
+            It offers a wide variety of switches and keycaps, along with reliable wireless connectivity.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="third-section">
+      <div class="third-container">
+        <div class="col-1">
+
+        </div>
+        <div class="col-2">
+
+        </div>
+        <div class="col-3">
+
+        </div>
+        <div class="col-4">
+          
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- 
-
-  Mechanical wireless keyboard
-  The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety 
-  of switches and keycaps, along with reliable wireless connectivity.
-
   Highly compatible
   Easy to use and works well with all major computer brands, gaming consoles and mobile devices. 
   Plug & play, no installation or driver needed.
