--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Typemaster pre-launch landing page</title>
+  <link rel="shortcut icon" href="./starter-code/assets/shared/logo.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/1b2a4a8051.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body>
@@ -71,39 +73,46 @@
 
     <section class="third-section">
       <div class="third-container">
-        <div class="col-1">
-
+        <div class="col col-1">
+          <i class="fa-solid fa-display fa-lg bg-img" style="color: #ffffff;"></i>
+          <h3>Highly compatible</h3>
+          <p class="para">
+            Easy to use and works well with all major computer brands, gaming consoles and mobile devices. 
+            Plug & play, no installation or driver needed.
+          </p>
         </div>
-        <div class="col-2">
-
+        <div class="col col-2">
+          <i class="fa-brands fa-bluetooth-b fa-lg bg-img" style="color: #ffffff;"></i>
+          <h3>Wireless <br> with bluetooth</h3>
+          <p class="para">
+            Powerful 2.4G RF technology allows you to connect the cordless keyboard from up to 30ft away. 
+            Simply plug the unifying receiver into your computer.
+          </p>
         </div>
-        <div class="col-3">
-
+        <div class="col col-3">
+          <i class="fa-solid fa-battery-full fa-lg bg-img" style="color: #ffffff;"></i>
+          <h3>High capacity <br> battery</h3>
+          <p class="para">
+            Equipped with a long-lasting built-in battery, you’ll never have to spend a dime on replaceable ones. 
+            Enjoy 40 hours of usage time between charges.
+          </p>
         </div>
-        <div class="col-4">
-          
+        <div class="col col-4">
+          <i class="fa-solid fa-lightbulb fa-lg bg-img" style="color: #ffffff;"></i>
+          <h3>RGB backlit modes</h3>
+          <p class="para">
+            Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps
+            you type in low light conditions.
+          </p>
         </div>
       </div>
     </section>
   </main>
 
+  <!----------------- FOOTER SECTION ----------------->
+
+  
   <!-- 
-  Highly compatible
-  Easy to use and works well with all major computer brands, gaming consoles and mobile devices. 
-  Plug & play, no installation or driver needed.
-
-  Wireless with bluetooth
-  Powerful 2.4G RF technology allows you to connect the cordless keyboard from up to 30ft away. 
-  Simply plug the unifying receiver into your computer.
-
-  High capacity battery
-  Equipped with a long-lasting built-in battery, you’ll never have to spend a dime on replaceable ones. 
-  Enjoy 40 hours of usage time between charges.
-
-  RGB backlit modes
-  Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps
-  you type in low light conditions.
-
   Typemaster 2021 | All Rights Reserved -->
 </body>
 </html>
