Finishing the footer section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Typemaster pre-launch landing page</title>
-  <link rel="shortcut icon" href="./starter-code/assets/shared/logo.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./starter-code/assets/favicon-32x32.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -111,8 +111,9 @@
 
   <!----------------- FOOTER SECTION ----------------->
 
-  
-  <!-- 
-  Typemaster 2021 | All Rights Reserved -->
+  <footer class="footer-section">
+    <p class="text-footer"><span class="bold">Typemaster 2021</span> | All Rights Reserved</p>
+  </footer>
+
 </body>
 </html>
