Fixing the breakpoint for the tablet view

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         </div>
         <div class="img-area">
           <img class="img-keyboard" src="./starter-code/assets/desktop/image-keyboard.jpg" alt="Image of a keyboard">
+          <img class="img-keyboard-2" src="./starter-code/assets/tablet/image-keyboard.jpg" alt="Image of a keyboard">
+          <img class="img-keyboard-3" src="./starter-code/assets/mobile/image-keyboard.jpg" alt="Image of a keyboard">
         </div>
       </div>
     </section>
