--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
       <div class="second-container">
         <img class="square-2" src="./starter-code/assets/shared/pattern-square.svg" alt="">
         <div class="first-img">
-          <img class="hover-img" src="./starter-code/assets/desktop/image-phone-and-keyboard.jpg" alt="">
+          <img class="hover-img" src="./starter-code/assets/desktop/image-phone-and-keyboard.jpg" alt="This an image of a keyboard">
+          <img class="hover-img-2" src="./starter-code/assets/tablet/image-phone-and-keyboard.jpg" alt="This an image of a keyboard">
         </div>
         <div class="second-img">
-          <img class="img-key" src="./starter-code/assets/desktop/image-glass-and-keyboard.jpg" alt="">
+          <img class="img-key" src="./starter-code/assets/desktop/image-glass-and-keyboard.jpg" alt="This an image of a keyboard">
+          <img class="img-key-2" src="./starter-code/assets/tablet/image-glass-and-keyboard.jpg" alt="This an image of a keyboard">
         </div>
         <div class="text-zone">
           <h2>Mechanical <br> wireless <br> keyboard</h2>
