Fixing the tablet view's breakpoint (third section)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="third-container">
         <div class="col col-1">
           <i class="fa-solid fa-display fa-lg bg-img" style="color: #ffffff;"></i>
-          <h3>Highly compatible</h3>
+          <h3 class="compatible-heading">Highly compatible</h3>
           <p class="para">
             Easy to use and works well with all major computer brands, gaming consoles and mobile devices. 
             Plug & play, no installation or driver needed.
@@ -103,7 +103,7 @@
         </div>
         <div class="col col-4">
           <i class="fa-solid fa-lightbulb fa-lg bg-img" style="color: #ffffff;"></i>
-          <h3>RGB backlit modes</h3>
+          <h3 class="rgb">RGB backlit modes</h3>
           <p class="para">
             Choose from 4 backlight brightness levels and adjustable breathing speed. Each key glows intensely in the dark and helps
             you type in low light conditions.
