Finishing the mob. view's breakpoint (2nd section)

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
         <div class="first-img">
           <img class="hover-img" src="./starter-code/assets/desktop/image-phone-and-keyboard.jpg" alt="This an image of a keyboard">
           <img class="hover-img-2" src="./starter-code/assets/tablet/image-phone-and-keyboard.jpg" alt="This an image of a keyboard">
+          <img class="hover-img-3" src="./starter-code/assets/mobile/image-phone-and-keyboard.jpg" alt="This an image of a keyboard">
         </div>
         <div class="second-img">
           <img class="img-key" src="./starter-code/assets/desktop/image-glass-and-keyboard.jpg" alt="This an image of a keyboard">
           <img class="img-key-2" src="./starter-code/assets/tablet/image-glass-and-keyboard.jpg" alt="This an image of a keyboard">
+          <img class="img-key-3" src="./starter-code/assets/mobile/image-glass-and-keyboard.jpg" alt="This an image of a keyboard">
         </div>
         <div class="text-zone">
           <h2>Mechanical <br> wireless <br> keyboard</h2>
